// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a secondary image 1`] = `
.c5 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c4 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c2 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 10px;
}

.c3 {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #DBDBDB;
}

@media (min-width:768px) {
  .c5 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c2 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.IS1 {
  margin-bottom: 0;
}
</style>

<article>
  <Head />
  <div
    className="c0 S1"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 S1"
  >
    <div
      className="c2 S1"
    >
      <div
        className="c3 S1"
      >
        <div>
          <SaveAndShareBar />
        </div>
      </div>
    </div>
    <div
      className="c4 S1"
    >
      <div>
        <div
          className="c5 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`2. an inline image 1`] = `
.c5 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c4 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c2 {
  background-color: #FFFFFF;
  height: 55px;
  margin: 30px 10px;
}

.c3 {
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #DBDBDB;
}

@media (min-width:768px) {
  .c5 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c5 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c2 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.IS1 {
  margin-bottom: 0;
}
</style>

<article>
  <Head />
  <div
    className="c0 S1"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 S1"
  >
    <div
      className="c2 S1"
    >
      <div
        className="c3 S1"
      >
        <div>
          <SaveAndShareBar />
        </div>
      </div>
    </div>
    <div
      className="c4 S1"
    >
      <div>
        <div
          className="c5 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;
